tests/expectations/compiler/bugs/locator_slash_return_type_fail.out
Error [EPAR0370047]: expected {
    --> compiler-test:5:27
     |
   5 |     fn f() -> credits.aleo/credits {
     |                           ^
